update: user management, jwt authenticate